syntax = "proto3";
package api;
option go_package = "petshop/petshop";

import "google/api/field_behavior.proto";

message User {
  string email = 1;
  string name = 2;
}

message Category {
  int64 id = 1;
  string name = 2;
}

message Tag {
  int64 id = 1;
  string name = 2;
}

enum Status {
  AVAILABLE = 0;
  PENDING = 1;
  SOLD = 2;
}

message Pet {
  int64 id = 1;
  Category category = 2;
  string name = 3 [(google.api.field_behavior) = REQUIRED];
  repeated string photo_urls = 4 [(google.api.field_behavior) = REQUIRED];
  repeated Tag tags = 5;
  Status status = 6;
}

message Pets {
  repeated Pet pets = 1;
}

message FindByStatus {
  repeated Status status = 1 [(google.api.field_behavior) = REQUIRED];
}

message FindByTag {
  repeated string tags = 1 [(google.api.field_behavior) = REQUIRED];
}

message Echo {
  string message = 1;
}

message World {
  int32 id = 1;
  int32 random_number = 2;
}

message Fortune {
  int32 id = 1;
  string message = 2;
}

message Queries {
  int32 queries = 1;
}
